@@ -22,16 +22,16 @@ repositories {
 }
 
 dependencies {
-	compile 'commons-collections:commons-collections:3.2.2'
+	compile 'org.apache.commons:commons-collections4:4.4'
     compile 'org.apache.commons:commons-dbcp2:2.9.0'
-    compile 'commons-net:commons-net:3.7'
+    compile 'commons-net:commons-net:3.7.1'
     compile 'jaxen:jaxen:1.2.0'
     compile 'org.apache.logging.log4j:log4j-api:2.17.1'
     compile 'org.apache.logging.log4j:log4j-core:2.17.1'
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.6.0.0'
-    compile 'org.springframework:spring-beans:5.3.8'
-    compile 'org.springframework:spring-jdbc:5.3.8'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.7.0.0'
+    compile 'org.springframework:spring-beans:5.3.9'
+    compile 'org.springframework:spring-jdbc:5.3.9'
     compile 'com.io7m.xom:xom:1.2.10'
 
     compile fileTree(dir: 'lib', include: '*.jar')
